--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.31.0
 yt-dlp==2023.11.16
 ffmpeg-python==0.2.0
-openai==1.6.1
+openai==0.28.0
 scikit-learn==1.3.2
 transformers==4.36.2
 torch>=2.2.0
@@ -11,3 +11,6 @@ librosa==0.10.1
 soundfile==0.12.1
 psutil==5.9.5
 requests==2.31.0
+pytube==15.0.0
+numpy>=1.24.0
+scipy>=1.10.0
