--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,18 @@
-streamlit==1.31.0
-yt-dlp==2023.11.16
-ffmpeg-python==0.2.0
+streamlit>=1.31.0
+yt-dlp>=2023.11.16
+ffmpeg-python>=0.2.0
 openai==0.28.0
-scikit-learn==1.3.2
-transformers==4.36.2
-torch>=2.2.0
-pydub==0.25.1
-python-dotenv==1.0.0
-librosa==0.10.1
-soundfile==0.12.1
-psutil==5.9.5
-requests==2.31.0
-pytube==15.0.0
+google-generativeai>=0.3.0
+scikit-learn>=1.3.0
+pydub>=0.25.1
+python-dotenv>=1.0.0
+librosa>=0.10.0
+soundfile>=0.12.0
+requests>=2.31.0
+pytube>=15.0.0
 numpy>=1.24.0
 scipy>=1.10.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+pandas>=2.0.0
+tqdm>=4.66.0
